--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://fedeparrilla10.github.io/bookfinder",
+  "homepage": "https://fedeparrilla10.github.io/bookfinder/",
   "name": "my-react-project",
   "private": true,
   "version": "0.0.0",
